# interpreting-neural-networks

./: .gitignore  README.md
data/: DatasetsLoadTests.ipynb  VessMapDatasetLoader.py  VesselsDatasetLoader.py
experiments/: Gradients_cesar_26_04_2024.ipynb  analysing_models.ipynb  extract_gradients.ipynb  fullfimente_images_gradients.ipynb  gradient_analysis.ipynb  gradient_bounding_box_images.ipynb  gradients_cesar.ipynb  gradients_plots.ipynb  jacobian_activation_analysis.ipynb  layer_activation_analisys.ipynb  noise_tunnel_gradient_analysis.ipynb  save_images.py  vess_map_gradient_analysis.ipynb  vess_map_gradient_probabilities_analysis.ipynb  vess_maps_analysing_models.ipynb
interpreting-cnns-app/: README.md
models/: CustomCNN.py  CustomCNNVessel.py  custom_cnn_classification_vary_disk.pth
models/augmented_vessels_trained_models/inferencia_baseline/torchtrainer/: __init__.py  imagedataset.py  img_util.py  inspector.py  model_debug.py  module_util.py  perf_funcs.py  profiling.py  pyproject.toml  util.py
models/augmented_vessels_trained_models/inferencia_baseline/torchtrainer/models/: __init__.py  densenet.py  layers.py  resnet_pyramid.py  resnet_seg.py  resunet.py
studies_tests/: CustomCNN.py  CustomCNNSegmentation.py  CustomCNNVessel.py  captum_classification_custom_dataset.ipynb  captum_classification_mnist.ipynb  captum_diff_targets.ipynb  captum_resnet18_mnist.ipynb  captum_segmentation_custom_dataset.ipynb  custom_cnn_custom_dataset.ipynb  custom_cnn_mnist.ipynb  gradcam_only.ipynb  hook_change_output.ipynb  mnist_resnet18.ipynb  (+1 more)
(+388 files in other folders)
