[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torchtrainer"
version = "0.0.1"
authors = [
  { name="Cesar Comin"},
]
description = "Helper modules for training neural networks with Pytorch."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/chcomin/torchtrainer"